update index.html test message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!--Description-->
     
-        <meta name="description" content="I know who I am">
+        <meta name="description" content="I know who I am hello world">
     
 
     <!--Author-->
